platform/ingress/10-argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: traefik
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`argocd.192-168-252-240.sslip.io`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls: {}
