platform/ingress/11-grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: traefik
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`grafana.192-168-252-240.sslip.io`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: kube-prometheus-stack-grafana
          namespace: observability
          port: 80
  tls:
    options:
      name: default
      namespace: traefik
