platform/ingress/12-prometheus.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: traefik
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`prometheus.192-168-252-240.sslip.io`)
      kind: Rule
      middlewares:
        - name: basic-auth
        - name: security-headers
      services:
        - name: kube-prometheus-stack-prometheus
          namespace: observability
          port: 9090
  tls: {}
