platform/ingress/14-traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`traefik.192-168-252-240.sslip.io`)
      kind: Rule
      middlewares:
        - name: basic-auth
        - name: security-headers
      services:
        - name: api@internal
          kind: TraefikService
  tls: {}
